# contextforge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: adaptive.py  cache.py  compressor.py  config.py  costs.py  embedder.py  main.py  middleware.py  models.py  proxy.py  router.py  telemetry.py  vector_store.py
benchmarks/: README.md  benchmark_utils.py  prompts_labeled.json  run_benchmark.py
config/: routing_rules.yaml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DASHBOARD.md  HANDOFF.md  SETUP.md  TROUBLESHOOTING.md  dashboard.html
docs/dashboard/: index.html
docs/dashboard/css/: style.css
docs/dashboard/js/: app.js  charts.js  data.js  tables.js  ui.js
fixtures/openai_responses/: chat_completion.json  chat_completion_errors.json  chat_completion_stream.json  chat_completion_success.json  error_429.json
tests/: conftest.py  test_adaptive.py  test_benchmarks.py  test_cache.py  test_cache_invalidation.py  test_compressor.py  test_proxy.py  test_router.py  test_telemetry.py
