[project]
name = "contextforge"
version = "0.1.0"
description = "Proxy middleware layer for LLM-powered apps — semantic caching, model routing, context compression."
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
